--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="container">
             <div class="row">
                 <!-- Left Column -->
-                <div class="column column-50">
+                <div class="column pilar_column_left">
                     <form action="#" class="pilar_product_card">
 
                         <!-- Step 1 -->
@@ -1839,7 +1839,7 @@
                 </div><!-- Left Column -->
                 
                 <!-- Right Column -->
-                <div class="column column-50">
+                <div class="column pilar_column_right">
                     <div class="row">
                         <!-- Product Settings Col -->
                         <div class="column">
