Product Details page Responsive 768px done

--- a/index.html
+++ b/index.html
@@ -1758,7 +1758,7 @@
                                         <h3 class="pilar_main_point pilar_download_title">Kylpyhuoneen kaappi #45621643</h3>
                                     </div>
                                     <div class="column">
-                                        <div class="pilar_print_item">
+                                        <div class="pilar_print_item float-right">
                                             <button class="button button-previous button-print">
                                                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="16" height="16" viewBox="0 0 16 16">
                                                     <g id="download" transform="translate(-975 -257)">
@@ -1839,7 +1839,7 @@
                 </div><!-- Left Column -->
                 
                 <!-- Right Column -->
-                <div class="column column-50">
+                <div class="column pilar_column_right">
                     <div class="row">
                         <!-- Product Settings Col -->
                         <div class="column column-10">
