Cart Page Done Desktop View

--- a/index.html
+++ b/index.html
@@ -1864,7 +1864,7 @@
                                 </button>
                             </div>
                             <div class="pilar_size_view">
-                                <button class="button button-settings">
+                                <button class="button button-settings active">
                                     <svg id="grid" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24" height="24" viewBox="0 0 24 24">
                                         <g id="Mask_Group_35" data-name="Mask Group 35">
                                         <g id="grid-2" data-name="grid" transform="translate(2.719 2.719)">
